--- a/search_filter/src/App.css
+++ b/search_filter/src/App.css
@@ -14,13 +14,17 @@
   font-size: 20px;
   padding-left: 10px;
   margin: 5px;
-  color: rgb(243, 255, 131);
+  color: rgb(191, 255, 217);
 }
 
-p{
+table{
+  display: grid;
   margin: 10px;
   font-size: 20px;
-  color: rgb(255, 255, 255);
+  margin-right: 50px;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
 *{
@@ -28,4 +32,24 @@ p{
 }
 h1{
   color: #ffffff;
+}
+
+th,td{
+  max-width: 200px;
+  margin-right: 500px;
+  padding: 0 1mm 0 1mm; 
+  width: 500px;
+  height: 40px;
+}
+
+th{
+  color: rgb(255, 242, 104);
+}
+
+td{
+  color: rgb(255, 255, 255);
+
+}
+.space{
+  height: 30px;
 }
